// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsed toggle button 1`] = `
<button
  className="node-expand-button"
  style={
    Object {
      "left": "22px",
    }
  }
  type="button"
>
  <i
    className="fas fa-plus"
  />
</button>
`;

exports[`Expanded toggle button 1`] = `
<button
  className="node-collapse-button"
  style={
    Object {
      "left": "22px",
    }
  }
  type="button"
>
  <i
    className="fas fa-minus"
  />
</button>
`;

exports[`No children 1`] = `null`;

exports[`Toggle button with a level of 3 1`] = `
<button
  className="node-expand-button"
  style={
    Object {
      "left": "154px",
    }
  }
  type="button"
>
  <i
    className="fas fa-plus"
  />
</button>
`;
